<resources>
    <string name="app_name">OpenEvents20</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_login">Login</string>
    <string name="titulo_email">Email</string>
    <string name="titulo_password">Password</string>
    <string name="titulo_register">Register</string>
    <string name="titulo_crear_evento">Crear Evento</string>
    <string name="titulo_nombre">Nombre</string>
    <string name="titulo_imagen">Imagen</string>
    <string name="titulo_locacion">locacion</string>
    <string name="titulo_descripcion">descripcion</string>
    <string name="titulo_fecha_inicio">fecha_inicio</string>
    <string name="titulo_fecha_final">fecha_final</string>
    <string name="titulo_numero_participantes">numero_participantes</string>
    <string name="titulo_tipo">tipo</string>
    <string name="titulo_crear">Crear</string>
    <string name="titulo_editar_mi_evento">EDITAR MI EVENTO</string>
    <string name="titulo_imagen_del_evento">imagen del evento</string>
    <string name="titulo_location">Location</string>
    <string name="titulo_description_del_evento">description del evento</string>
    <string name="titulo_numero_de_participantes">Numero de participantes</string>
    <string name="titulo_tipo_de_evento">Tipo de evento</string>
    <string name="titulo_editar">EDITAR</string>
    <string name="titulo_editar_usuario">EDITAR USUARIO</string>
    <string name="titulo_apellido">Apellido</string>
    <string name="titulo_correo">Correo</string>
    <string name="titulo_de_evento">Titulo de Evento</string>
    <string name="titulo_localizacion_del_evento">localizacion del evento</string>
    <string name="titulo_descripcion_del_evento">descripcion del evento</string>
    <string name="titulo_fecha_de_inicio_del_evento">Fecha de inicio del evento</string>
    <string name="titulo_fecha_de_fin_del_evento">Fecha de fin del evento</string>
    <string name="titulo_numero_de_participantes_del_evento">Numero de participantes del evento</string>
    <string name="titulo_unirse">Unirse</string>
    <string name="titulo_eliminar">eliminar</string>
    <string name="titulo_registro">Registro</string>
    <string name="titulo_best">BEST</string>
    <string name="titulo_nombre_del_usuario">nombre del usuario</string>
    <string name="titulo_apellido_del_usuario">Apellido del usuario</string>
    <string name="titulo_email_del_usuario">Email del usuario</string>
    <string name="titulo_password_del_usuario">Password del usuario</string>
    <string name="titulo_imagen_del_usuario">imagen del usuario</string>
    <string name="titulo_editar_perfil">Editar perfil</string>
    <string name="titulo_cerrar_sesion">Cerrar sesion</string>
</resources>