<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades.CreateEvent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_crear_evento"
            android:textAlignment="center"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="-1dp" />



        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/titulo_nombre"
            android:padding="15dp"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="80dp" />


        <EditText
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/titulo_imagen"
            android:padding="15dp"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="130dp" />

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/titulo_locacion"
            android:padding="15dp"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="204dp" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo_descripcion"
            android:padding="15dp"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="273dp" />

        <EditText
            android:id="@+id/eventStart_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo_fecha_inicio"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/eventEnd_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo_fecha_final"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="273dp" />
        <EditText
            android:id="@+id/n_participators"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo_numero_participantes"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo_tipo"
            android:textSize="15sp" />


        <Button
            android:id="@+id/btn_create_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_crear"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image"
            tools:layout_editor_absoluteX="24dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>