<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades.EventInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/miImagen"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            />


        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="@string/titulo_de_evento" />


        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/titulo_localizacion_del_evento" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/titulo_descripcion_del_evento" />

        <TextView
            android:id="@+id/eventStart_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/titulo_fecha_de_inicio_del_evento" />

        <TextView
            android:id="@+id/eventEnd_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/titulo_fecha_de_fin_del_evento" />

        <TextView
            android:id="@+id/n_participators"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/titulo_numero_de_participantes_del_evento" />

        <TextView
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/titulo_tipo_de_evento" />

        <Button
            android:id="@+id/unirse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/add"
            android:text="@string/titulo_unirse">

        </Button>

        <Button
            android:id="@+id/edit_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/edit"
            android:text="@string/titulo_editar">

        </Button>

        <Button
            android:id="@+id/eliminate_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/delete"
            android:text="@string/titulo_eliminar">

        </Button>




    </LinearLayout>

    <!--
    TODO hacer varios textview y un linearLayout con las id de los atributos de Evento (nombre,ubicacion,fecha...)
    -->



</androidx.constraintlayout.widget.ConstraintLayout>