<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades.EditMyUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_editar_usuario"
            android:textAlignment="center"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="-1dp" />


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/titulo_nombre"
            android:padding="15dp"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="80dp" />



        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/titulo_apellido"
            android:padding="15dp"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="80dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/titulo_correo"
            android:padding="15dp"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="80dp" />

        <EditText
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/titulo_imagen"
            android:padding="15dp"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="80dp" />






        <Button
            android:id="@+id/btn_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_editar"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image"
            android:drawableRight="@drawable/edit"
            tools:layout_editor_absoluteX="24dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>